--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "12.1.2",
+    "@angular/cdk": "^11.2.10",
     "@angular/common": "12.1.2",
     "@angular/compiler": "12.1.2",
     "@angular/core": "12.1.2",
     "@angular/forms": "12.1.2",
+    "@angular/material": "^11.2.10",
     "@angular/http": "7.2.16",
     "@angular/localize": "^12.1.2",
     "@angular/platform-browser": "12.1.2",
@@ -23,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "bootstrap": "4.5.2",
     "chart.js": "2.9.3",
+    "jquery": "^3.3.1",
+    "jwt-decode": "^3.1.2",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
     "ngx-clipboard": "14.0.1",
